--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -11,6 +11,7 @@ body {
 h1, h2, h3, h4, h5, h6 {
   color:#222;
   margin:0 0 20px;
+  font: 30px/1.5 "Nanum Pen Script", cursive;
 }
 
 p, ul, ol, table, pre, dl {
